--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "MIT",
   "devDependencies": {
     "@vitest/coverage-v8": "^1.3.1",
-    "vitest": "^1.3.1",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "vitest": "^1.3.1"
+  },
+  "dependencies": {
+    "@hapi/hapi": "^21.3.12"
   }
 }
