--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "SR",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^22.12.0",
     "@vitest/coverage-v8": "^1.3.1",
     "typescript": "^5.4.2",
     "vitest": "^1.3.1"
