--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "mysterious-crawler",
   "version": "1.0.0",
   "description": "SR",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/app.js",
     "build": "tsc --project tsconfig.build.json",
     "test": "vitest run --coverage",
     "test:watch": "vitest"
